5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1637_2704.log
== TEST (2019-04-09 11:13:34) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" + nota*0.05
else:
	mensagem = "N"

print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem = "S" + nota*0.05
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:14:02) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota*0.05
else:
	mensagem = "N"

print(mensagem)

-- OUTPUT:
('S', 0.25)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:14:34) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota+ (nota*0.05)
else:
	mensagem = "N"

print(mensagem)

-- OUTPUT:
('S', 5.25)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:14:50) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota+ (nota*0.05)
else:
	mensagem = "N"

print(mensagem)

-- EXECUTION TIME:
0.191202
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
('S', 5.25)
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
('S', 9.45)
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:14:59) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota + (nota*0.05)
else:
	mensagem = "N"

print(mensagem)

-- OUTPUT:
('S', 5.25)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:15:21) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- OUTPUT:
('S', 5.5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:15:32) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- EXECUTION TIME:
0.120616
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
('S', 5.5)
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
('S', 9.9)
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:15:39) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- OUTPUT:
('S', 5.5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:16:00) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 6):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- OUTPUT:
N
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:16:01) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 6):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- EXECUTION TIME:
0.140161
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
N
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
('S', 9.9)
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:16:02) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 6):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- EXECUTION TIME:
0.250334
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
N
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
('S', 9.9)
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:16:02) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 6):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- EXECUTION TIME:
0.203806
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
N
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
N
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:54) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- OUTPUT:
('S', 5.5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:17:55) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- EXECUTION TIME:
0.116454
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
('S', 5.5)
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
('S', 9.9)
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:17:58) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- EXECUTION TIME:
0.160087
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
('S', 5.5)
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
('S', 9.9)
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:17:59) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- EXECUTION TIME:
0.142851
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
('S', 5.5)
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
('S', 9.9)
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
('S', 5.5)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:59) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- OUTPUT:
('S', 5.5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:17:59) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- EXECUTION TIME:
0.184597
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
('S', 5.5)
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
nota: ('S', 9.9)
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
('S', 5.5)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:18:00) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- EXECUTION TIME:
0.178503
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
('S', 5.5)
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
('S', 9.9)
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:18:03) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- OUTPUT:
('S', 5.5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:18:04) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- EXECUTION TIME:
0.146479
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
('S', 5.5)
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
('S', 9.9)
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:18:05) 
-- CODE:
nota = float(input("nota: "))

if(nota >= 5):
	mensagem = "S" , nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- OUTPUT:
('S', 5.5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:25:44) 
-- CODE:
nota = float(input("nota: "))
b=input("vai receber bonificacao?") .upper()

if(nota == ):
	mensagem = "S" 
	total=nota + (nota*10/100)
else:
	mensagem = "N"

print(mensagem)

-- ERROR:
File "XXXX", line 4
    if(nota == ):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:29:03) 
-- CODE:
nota = float(input("nota: "))
b=input("vai receber bonificacao?") .upper()

if(b=="S"):
	
	total=nota + (nota*10/100)
else:
	mensagem = "N"
	

print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:29:32) 
-- CODE:
nota = float(input("nota: "))
b=input("vai receber bonificacao?") .upper()

if(b=="S"):
	
	total=nota + (nota*10/100)
else:
	total=nota
	

print(total)

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:29:39) 
-- CODE:
nota = float(input("nota: "))
b=input("vai receber bonificacao?") .upper()

if(b=="S"):
	
	total=nota + (nota*10/100)
else:
	total=nota
	

print(total)

-- EXECUTION TIME:
0.297678
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
